--- a/package.json
+++ b/package.json
@@ -1,19 +1,7 @@
 {
-  "name": "nexuskit-galaxy",
-  "private": true,
-  "version": "2.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
+  "name": "nexuskit",
+  "version": "1.0.0",
   "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.3"
-  },
-  "devDependencies": {
-    "vite": "^5.0.0"
+    "mongoose": "^8.0.0"
   }
 }
